--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ distro==1.9.0
 exceptiongroup==1.2.0
 executing==2.0.1
 fastapi==0.108.0
+Flask==3.0.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
