--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.6.0
 anyio==4.2.0
 asttokens==2.4.1
 bcrypt==4.1.2
@@ -6,6 +7,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+distro==1.9.0
 exceptiongroup==1.2.0
 executing==2.0.1
 Flask==3.0.1
@@ -21,11 +23,15 @@ importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+openai==1.12.0
+pydantic==2.6.1
+pydantic_core==2.16.2
 Pygments==2.17.2
 python-dotenv==1.0.1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
+tqdm==4.66.2
 typing_extensions==4.9.0
 urllib3==2.1.0
 Werkzeug==3.0.1
