--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 annotated-types==0.6.0
 anyio==4.2.0
 asttokens==2.4.1
-bcrypt==4.1.2
 blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -10,10 +9,9 @@ colorama==0.4.6
 distro==1.9.0
 exceptiongroup==1.2.0
 executing==2.0.1
-Flask==3.0.1
-Flask-Bcrypt==1.0.1
+fastapi==0.108.0
+Flask==3.0.2
 Flask-Cors==4.0.0
-Flask-Login==0.6.3
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
@@ -22,17 +20,19 @@ idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
-MarkupSafe==2.1.4
-openai==1.12.0
-pydantic==2.6.1
-pydantic_core==2.16.2
+MarkupSafe==2.1.5
+openai==1.6.1
+pydantic==2.5.3
+pydantic_core==2.14.6
 Pygments==2.17.2
 python-dotenv==1.0.1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
-tqdm==4.66.2
+starlette==0.32.0.post1
+tqdm==4.66.1
 typing_extensions==4.9.0
 urllib3==2.1.0
+uvicorn==0.25.0
 Werkzeug==3.0.1
 zipp==3.17.0
