--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ executing==2.0.1
 fastapi==0.108.0
 Flask==3.0.2
 Flask-Cors==4.0.0
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
@@ -22,6 +23,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 openai==1.6.1
+packaging==23.2
 pydantic==2.5.3
 pydantic_core==2.14.6
 Pygments==2.17.2
